central graphics repository: fuzzy shells

--- a/common/latd.tex
+++ b/common/latd.tex
@@ -110,7 +110,7 @@ the N5 lattice \xref{def:lat_N5} and the M3 lattice \xref{def:lat_M3}.
 \index{characterizations!distributive lattices}
 \index{equational bases!distributive lattices}
 %=======================================
-This section describes some \hi{characterizations} (\hi{equational bases}) 
+This section describes some \hi{characterizations} (\hi{equational bases})
 of distributive lattices both in terms of lattices (order characterizations)
 and in terms of abstract algebraic structures (algebraic characterizations).
 \begin{liste}
@@ -381,7 +381,7 @@ and let meet take algebraic precedence over join (+).
   \\
   The M3 lattice is also called the \structd{diamond},
   }
-%The M3 lattice 
+%The M3 lattice
 and is illustrated by the Hasse diagram to the right.
 \end{definition}
 \end{minipage}%
@@ -397,18 +397,18 @@ and is illustrated by the Hasse diagram to the right.
 %---------------------------------------
 The M3 lattice is isomorphic to the lattices
 \\\begin{tabular}{@{\qquad}MMl}
-  \imark & \opair{\sssP{\setn{x,y,z}}}{\orel}\footnotemark 
+  \imark & \opair{\sssP{\setn{x,y,z}}}{\orel}\footnotemark
           & where $\sssP{\setn{x,y,z}}$ is the set of \hie{partitions} on $\setn{x,y,z}$\\
          && and with $\orel$ defined as in \prefpp{prop:partition_orel}\\
-  \imark & \opair{\sssR{\setn{x,y}}}{\sorel}   
+  \imark & \opair{\sssR{\setn{x,y}}}{\sorel}
           & where $\sssR{\setn{x,y}}$ is the set of \hie{rings of sets} on $\setn{x,y}$\\
-  \imark & \opair{\sssA{\setn{x,y,z}}}{\sorel} 
+  \imark & \opair{\sssA{\setn{x,y,z}}}{\sorel}
           & where $\sssA{\setn{x,y,z}}$ is the set of \hie{algebras of sets} on $\setn{x,y,z}$.
 \end{tabular}
 \\
 \citetblt{\citerpg{salii1988}{22}{0821845225}}
 See \prefpp{ex:set_partitions}, \prefpp{ex:set_rings}, \prefpp{ex:set_asets}, and
-\prefpp{fig:set_partition_xyz}. 
+\prefpp{fig:set_partition_xyz}.
 \end{remark}
 
 %---------------------------------------
@@ -424,7 +424,7 @@ See \prefpp{ex:set_partitions}, \prefpp{ex:set_rings}, \prefpp{ex:set_asets}, an
 %---------------------------------------
 \lembox{
   \brb{\begin{array}{M}
-    $\latL$ is an \structb{M3 lattice}\\ 
+    $\latL$ is an \structb{M3 lattice}\\
     \xref{def:m3}
   \end{array}}
   \implies
@@ -673,65 +673,66 @@ Let $\latL\eqd\latticed$ be a \hie{lattice}.
 
     \begin{enumerate}
       \item Proof that this statement is equivalent to
-        {\begin{minipage}[t]{2\tw/16+1ex}%
-            \fontsize{0.5mm}{0.5mm}\usefont{T1}{put}{b}{n}%
-            \begin{Verbatim}[frame=single, gobble=8, label={\footnotesize\rmfamily email}]
-              Consider the 3 statements:
-
-              A:  L is nondistributive
-              B:  M3 can be embedded in L
-              C: N5 can be embedded in L
-
-              Theorem 3.6 says:
-                      A <--> (B or C)
-              is true of lattices.
-
-              This is equivalent to:
-                  (A --> (B or C)) and ((B or C) --> A)
-              which is equivalent to
-                  ((A --> (B or C))  and ((B --> A) and (C --> A))
-              The last two implications are your (1) and (2).
-
-              So what remains after these two is to show
-                  A --> (B or C)
-              is true. But this is equivalent to
-                  not A or B or  C
-              which is equivalent to
-                  not A or not (not C) or B
-               which is equivalent  (by de Morgan's Laws) to
-                  not (A and not C)) or B
-              which is equivalent to
-                  (A and not C) --> B
-              which is your (3).
-
-              Note: one could have used (A and not B) --> C, which is your (4),
-              instead of (3). But no need to prove both. The above is just an
-              application of propositional logic. You can also use truth tables
-              to show that
-
-                  A <--> (B or C)
-              and
-                  ((A and not C) --> B) and ((B --> A) and (C --> A))
-
-              have the same the same truth values, no matter how you assign TRUE/FALSE
-              to each of A,B,C. So they are equivalent.
-
-              Stanley Burris
-              Professor Emeritus
-              Dept. of Pure Mathematics
-              University of Waterloo
-              Waterloo, Ontario
-              Canada N2L 3G1
-            \end{Verbatim}
-          \end{minipage}
-          \hfill
-          \begin{minipage}[t]{13\tw/16-3ex}
+\footnote{
+%        {\begin{minipage}[t]{2\tw/16+1ex}%
+%            \fontsize{0.5mm}{0.5mm}\usefont{T1}{put}{b}{n}%
+%            \begin{Verbatim}[frame=single, gobble=8, label={\footnotesize\rmfamily email}]
+%              Consider the 3 statements:
+%
+%              A:  L is nondistributive
+%              B:  M3 can be embedded in L
+%              C: N5 can be embedded in L
+%
+%              Theorem 3.6 says:
+%                      A <--> (B or C)
+%              is true of lattices.
+%
+%              This is equivalent to:
+%                  (A --> (B or C)) and ((B or C) --> A)
+%              which is equivalent to
+%                  ((A --> (B or C))  and ((B --> A) and (C --> A))
+%              The last two implications are your (1) and (2).
+%
+%              So what remains after these two is to show
+%                  A --> (B or C)
+%              is true. But this is equivalent to
+%                  not A or B or  C
+%              which is equivalent to
+%                  not A or not (not C) or B
+%               which is equivalent  (by de Morgan's Laws) to
+%                  not (A and not C)) or B
+%              which is equivalent to
+%                  (A and not C) --> B
+%              which is your (3).
+%
+%              Note: one could have used (A and not B) --> C, which is your (4),
+%              instead of (3). But no need to prove both. The above is just an
+%              application of propositional logic. You can also use truth tables
+%              to show that
+%
+%                  A <--> (B or C)
+%              and
+%                  ((A and not C) --> B) and ((B --> A) and (C --> A))
+%
+%              have the same the same truth values, no matter how you assign TRUE/FALSE
+%              to each of A,B,C. So they are equivalent.
+%
+%              Stanley Burris
+%              Professor Emeritus
+%              Dept. of Pure Mathematics
+%              University of Waterloo
+%              Waterloo, Ontario
+%              Canada N2L 3G1
+%            \end{Verbatim}
+%          \end{minipage}
+%          \hfill
+%          \begin{minipage}[t]{13\tw/16-3ex}
             Many many thanks to University of Waterloo Professor Emeritus
             \href{http://www.thoralf.uwaterloo.ca}{Stanley Burris}
             for his brilliant help with the logical structure of this proof.
-            (If you are viewing this text as a pdf file,
-             zoom in on the figure to the left to see text from Professor Burris' 2007 October 9 email.)
-          \end{minipage}
+            %(If you are viewing this text as a pdf file,
+            % zoom in on the figure to the left to see text from Professor Burris' 2007 October 9 email.)
+%          \end{minipage}}
         }
           \[ (\text{$\latL$ is nondistributive}) \land (N5\notin L) \implies (M3\in L): \]
         Let $P\equiv Q$ denote that statement $P$ is equivalent to statement $Q$. Then \ldots
@@ -780,7 +781,7 @@ Let $\latL\eqd\latticed$ be a \hie{lattice}.
                 \nput{ 90}{1}{$\bid$}
                 \nput{180}{x}{$\dot{x}$} \nput{180}{y}{$\dot{y}$} \nput{0}{z}{$\dot{z}$}
                 \nput{-90}{0}{$\bzero$}
-                }            
+                }
             \end{minipage}
 
           \item Proof that $a\orel b$:   \label{item:lat_distrib_iff_N5M3_ab}
@@ -917,7 +918,6 @@ Let $\latL\eqd\latticed$ be a \hie{lattice}.
                 and $x$ with $z$ in \pref{item:lat_distrib_iff_N5M3_xyb}.
         \end{enumerate}
     \end{enumerate}
-
 \end{enumerate}
 \end{proof}
 
@@ -1048,7 +1048,7 @@ Let $\latL\eqd\latticed$ be a \prope{lattice}.
       \item Proof that $\latL$ is \prope{modular}:\label{item:cancel_mod}
         \begin{enumerate}
           \item Consider the following $N5$ lattice: \tbox{\includegraphics{../common/math/graphics/pdfs/lat5_n5_xyz.pdf}}%
-        
+
           \item For the $N5$ lattice, the \prope{cancellation} property does not hold because
             \\
             $\begin{array}{@{\qquad}cc lcl ccN}
@@ -1057,7 +1057,7 @@ Let $\latL\eqd\latticed$ be a \prope{lattice}.
             \end{array}$
             \\
             but yet $x\ne y$.
-        
+
           \item Because $N5$ does \emph{not} support the \prope{cancellation} property
             and by the hypothesis that $\latL$ \emph{does} support the cancellation property,
             $\latL$ therefore does \emph{not} contain $N5$.
@@ -1222,7 +1222,7 @@ Let $\latL\eqd\latticed$ be a \prope{lattice}.
 Let $\latA\eqd\latticed$ be an \hie{algebraic structure}.
 \propbox{%
   \brb{\begin{array}{M}
-    $\latA$ is a\\ 
+    $\latA$ is a\\
     \structb{distributive lattice}
   \end{array}}
   \iff
@@ -1247,7 +1247,7 @@ Let $\latA\eqd\latticed$ be an \hie{algebraic structure}.
 Let $\latA\eqd\latticed$ be an \hie{algebraic structure}.
 \propbox{
   \brb{\begin{array}{M}
-    $\latA$ is a\\ 
+    $\latA$ is a\\
     \structb{distributive lattice}
   \end{array}}
   \iff
@@ -1273,7 +1273,7 @@ Let $\latA\eqd\latticed$ be an \hie{algebraic structure}.
 Let $\latA\eqd\latticed$ be an \hie{algebraic structure}.
 \thmbox{
   \brb{\begin{array}{M}
-    $\latA$ is a\\ 
+    $\latA$ is a\\
     \structb{distributive lattice}
   \end{array}}
   \iff
@@ -1461,11 +1461,11 @@ Let $\latA\eqd\latticed$ be an \hie{algebraic structure}.
             && \text{by \prope{meet commutative} property \xref{item:s1951_meetc}}
           \\&= zx + z(y+z)
             && \text{by \prope{conjunctive distributive} property \xref{item:s1951_meetd}}
-          \\&= z(z+y) + zx  
+          \\&= z(z+y) + zx
             && \text{by \prope{join commutative} property \xref{item:s1951_joinc}}
-          \\&= z + zx  
+          \\&= z + zx
             && \text{by 1}
-          \\&= z + zx  
+          \\&= z + zx
             && \text{by 1}
           \\&= z
             && \text{by \prope{join absorptive} property \xref{item:s1951_joinab}}
@@ -1494,7 +1494,7 @@ Let $\latA\eqd\latticed$ be an \hie{algebraic structure}.
             && \text{by \prope{conjunctive distributive} property \xref{item:s1951_meetd}}
           \\&= x + (y+z)
             && \text{by \pref{item:s1951_joinas_Px}}
-        \end{align*}   
+        \end{align*}
     \begin{align*}
     \end{align*}
   \end{enumerate}
@@ -1601,7 +1601,7 @@ Let $\latA\eqd\latticed$ be an \hie{algebraic structure}.
             && \text{by 1}
         \end{align*}
 
-      \item Proof that $(xy)z=x(yz)$: 
+      \item Proof that $(xy)z=x(yz)$:
         \begin{align*}
           (xy)z
             &= \brs{(Q+x)(Q+y)}(Q+z)
@@ -1634,12 +1634,12 @@ Let $\latA\eqd\latticed$ be an \hie{algebraic structure}.
           \item $\latA$ is \prope{commutative} by \pref{item:s1951_meetc} and \pref{item:s1951_joinc}.
           \item $\latA$ is \prope{associative} by \pref{item:s1951_meetas} and \pref{item:s1951_joinas}.
           \item $\latA$ is \prope{absorptive}  by 1 and \pref{item:s1951_joinab}.
-          \item Because $\latA$ is 
+          \item Because $\latA$ is
                 \prope{idempotent}, \prope{commutative}, \prope{associative}, and \prope{absorptive},
                 then by \prefpp{thm:lattice}, $\latA$ is a \hie{lattice}.
         \end{enumerate}
 
-      \item Proof that $\latA$ is \prope{distributive}: 
+      \item Proof that $\latA$ is \prope{distributive}:
             by \pref{item:s1951_meetd} and \prefpp{def:latd}.
     \end{enumerate}
 \end{enumerate}
@@ -2009,9 +2009,9 @@ and of these five, three are distributive \xref{prop:lat_num_ldm}.
 \prefpp{ex:lat_set5} illustrated all five of the unlabeled lattices,
 \prefpp{ex:lat_set5_mod} illustrated the 4 modular lattices,
 and the following table illustrates the 3 distributive lattices.
-Note that none of these lattices are \prope{complemented} 
+Note that none of these lattices are \prope{complemented}
 (none are \prope{Boolean}\ifsxref{boolean}{def:boolean}).
-%The lattice below each Hasse diagram is the smallest power set lattice 
+%The lattice below each Hasse diagram is the smallest power set lattice
 %containing the Hasse diagram (see \prefp{thm:latd_birkhoff}).
 \exbox{\begin{tabular}{cc|ccc}
   %\hline
@@ -2039,7 +2039,7 @@ and of these 15, five are distributive \xref{prop:lat_num_ldm}.
 \prefpp{ex:lat_set6} illustrated all 15 of the unlabeled lattices,
 \prefpp{ex:lat_set6_mod} illustrated the 8 modular lattices,
 and the following illustrates the 5 distributive lattices.\\
-Note that none of these lattices are \prope{complemented} 
+Note that none of these lattices are \prope{complemented}
 (none are \prope{Boolean}\ifsxref{boolean}{def:boolean}).
 \exbox{\begin{tabular}{ccccc}%
    \mc{5}{c}{distributive lattices on 6 element sets}%
@@ -2066,7 +2066,7 @@ and of these, 8 are \prope{distributive} \xref{prop:lat_num_ldm}.
 \prefpp{ex:lat_set7} illustrated all 53 of the unlabeled lattices,
 \prefpp{ex:lat_set7_mod} illustrated the 16 \prope{modular} lattices,
 and the following illustrates the 8 distributive lattices.
-Note that none of these lattices are \prope{complemented} 
+Note that none of these lattices are \prope{complemented}
 (none are \prope{Boolean}\ifsxref{boolean}{def:boolean}).
 \exbox{\begin{tabular}{cccccccc}%
    \mc{8}{c}{distributive lattices on 7 element sets}%
