central graphics repository: larc balls

--- a/common/math/graphics/symseq/larc_ball(1_1_1).tex
+++ b/common/math/graphics/symseq/larc_ball(1_1_1).tex
@@ -28,7 +28,7 @@
       %zmin=-1.75,zmax=3.25,%
       %%colorbar horizontal,%
       ]%
-      \addplot3[mesh] table[header=false]\input{../symseq/larc_ball(1_1_1).dat};%
+      \addplot3[mesh] table[header=false]{../symseq/larc_ball(1_1_1).dat};%
     \end{axis}%
   \end{tikzpicture}%
   %\uput[45]{0}(center){$\opair{0}{0}$}
