--- a/common/math/graphics/symseq/larc_ball(0_0_-3).tex
+++ b/common/math/graphics/symseq/larc_ball(0_0_-3).tex
@@ -22,7 +22,7 @@
       zmin=-5.75,zmax=-1,%
       %%colorbar horizontal,%
       ]%
-      \addplot3[mesh] table[header=false]\input{../symseq/larc_ball(0_0_-3).dat};%
+      \addplot3[mesh] table[header=false]{../symseq/larc_ball(0_0_-3).dat};%
     \end{axis}%
   \end{tikzpicture}%
   %\uput[45]{0}(center){$\opair{0}{0}$}
