central graphics repository: 2014plat

--- a/common/bib/analysis.bib
+++ b/common/bib/analysis.bib
@@ -2608,6 +2608,18 @@
   language     = {English},
   }
 
+@article{gonzalez1992,
+  title        = {Connections in Mathematical Analysis: the Case of Fourier Series},
+  author       = {Enrique A. Gonz/'alez-Velasco},
+  url          = {https://www.math.ucdavis.edu/~saito/courses/121/gonzalez.pdf},
+  year         = {1992},
+  volume       = {99},
+  number       = {5},
+  pages        = {427--441},
+  doi          = {10.1080/00029890.1992.11995871},
+  journal      = {The American Mathematical Monthly},
+  }
+
 @book{grabiec2006,
   author       = {Mariusz Grabiec and Yeol Je Cho and Viorel Radu},  
   title        = {On Nonsymmetric Topological and Probabilistic Structures},
