--- a/common/math/graphics/latp_bortho_L5.tex
+++ b/common/math/graphics/latp_bortho_L5.tex
@@ -81,15 +81,14 @@
     %dotsep=0.5pt,
     %linecolor=blue,
     }%
-  \rput(pLwxyz){\psset{unit=9mm}\input{../../common/math/graphics/latoc/lat32_l2e5_center_pqrst.tex}}%
-  %\rput(0.9,4.4){\psset{unit=9mm}\input{../../common/math/graphics/latoc/lat32_l2e5_center_pqrst.tex}}%
-  \rput(Lwxy){\psset{unit=6mm}\input{../../common/math/graphics/latoc/lat16_l2e4_center_qrst.tex}}%
-  \rput(Lwx){\input{../../common/math/graphics/latoc/lat8_l2e3_center_qft.tex}}%
-  \rput(Lw){{\input{../../common/math/graphics/latoc/lat4_m2_center_q.tex}}}%
-  \rput(Lx){\input{../../common/math/graphics/latoc/lat6_o6_center_ft.tex}}%
-  \rput(Ly){\psset{unit=5mm}\input{../../common/math/graphics/latoc/lat10_o8m2_center_rsde.tex}}%
-  \rput(pLz){\psset{unit=7mm}\input{../../common/math/graphics/latoc/lat18_B5dB4_pabcdegh.tex}}%
-  \rput(Lzero){{\input{../../common/math/graphics/latoc/lat2_l2_center_01.tex}}}%
+  \rput(pLwxyz){\psset{unit=9mm}\input{../latoc/lat32_l2e5_center_pqrst.tex}}%
+  \rput(Lwxy){\psset{unit=6mm}\input{../latoc/lat16_l2e4_center_qrst.tex}}%
+  \rput(Lwx){\input{../latoc/lat8_l2e3_center_qft.tex}}%
+  \rput(Lw){{\input{../latoc/lat4_m2_center_q.tex}}}%
+  \rput(Lx){\input{../latoc/lat6_o6_center_ft.tex}}%
+  \rput(Ly){\psset{unit=5mm}\input{../latoc/lat10_o8m2_center_rsde.tex}}%
+  \rput(pLz){\psset{unit=7mm}\input{../latoc/lat18_B5dB4_pabcdegh.tex}}%
+  \rput(Lzero){{\input{../latoc/lat2_l2_center_01.tex}}}%
   }%
   %---------------------------------
   % deveolopment support
