--- a/common/math/graphics/prob/latp_gsp_AorT.tex
+++ b/common/math/graphics/prob/latp_gsp_AorT.tex
@@ -60,10 +60,8 @@
   %---------------------------------
   % individual node labels
   %---------------------------------
-  %\uput[-45](Lwxyz){$\latL_2^5$}%
   \uput[-67](Lwxy){$\latL_2^4$}%
   \uput[-45](Lwx){$\latL_2^3$}%
-  %\uput[-45](Lz){$\latL_2^5\latd\latL_2^4$}%
   \uput[-90](Ly){$\latL_2^4\latd\latL_2^3$}%
   \uput[-90](Lx){$\latL_2^3\latd\latL_2^2$}%
   \uput[-90](Lw){$\latL_2^2$}%
@@ -74,19 +72,13 @@
   %---------------------------------
   {\psset{
     unit=5mm,%
-    %labelsep=1.5mm,
-    %radius=1mm,
-    %dotsep=0.5pt,
-    %linecolor=blue,
     }%
-  %\rput(Lwxyz){\psset{unit=6mm}\input{../common/math/graphics/lat/lat32_l2e5_center_vwxyzoc.tex}}%
-  \rput(Lwxy){\input{../../common/math/graphics/gsp/lat16_l2e4_gsp_atcg.tex}}%
-  \rput(Lwx){\input{../../common/math/graphics/gsp/lat8_l2e3_gsp_aa+tt.tex}}%
-  %\rput(Lz){\psset{yunit=8mm}\input{../../common/math/graphics/lat/lat18_L5dL4_center_aw.tex}}%
-  \rput(Ly){\psset{unit=5mm}\input{../../common/math/graphics/gsp/lat10_o8m2_gsp_cg.tex}}%
-  \rput(Lx){\input{../../common/math/graphics/gsp/lat6_o6_gsp_at-t-a.tex}}%
-  \rput(Lw){{\input{../../common/math/graphics/gsp/lat4_l2e2_gsp_a+t_c+g.tex}}}%
-  \rput(Lzero){{\input{../../common/math/graphics/latoc/lat2_l2_center_01.tex}}}%
+  \rput(Lwxy){\input{../gsp/lat16_l2e4_gsp_atcg.tex}}%
+  \rput(Lwx){\input{../gsp/lat8_l2e3_gsp_aa+tt.tex}}%
+  \rput(Ly){\psset{unit=5mm}\input{../gsp/lat10_o8m2_gsp_cg.tex}}%
+  \rput(Lx){\input{../gsp/lat6_o6_gsp_at-t-a.tex}}%
+  \rput(Lw){{\input{../gsp/lat4_l2e2_gsp_a+t_c+g.tex}}}%
+  \rput(Lzero){{\input{../latoc/lat2_l2_center_01.tex}}}%
   }%
   %---------------------------------
   % deveolopment support
