--- a/common/math/graphics/prob/latp_prob.tex
+++ b/common/math/graphics/prob/latp_prob.tex
@@ -71,14 +71,14 @@
     %dotsep=0.5pt,
     %linecolor=blue,
     }%
-  %\rput(Lwxyz){\psset{unit=6mm}\input{../../common/math/graphics/lat/lat32_l2e5_center_vwxyzoc.tex}}%
-  \rput(pLwxy){\psset{unit=9mm}\input{../../common/math/graphics/prob/lat16_l2e4_prob.tex}}%
-  \rput(Lwx){\psset{unit=7mm}\input{../../common/math/graphics/prob/lat8_l2e3_prob.tex}}%
-  %\rput(Lz){\psset{yunit=8mm}\input{../../common/math/graphics/lat/lat18_L5dL4_center_aw.tex}}%
-  \rput(Ly){\psset{unit=5mm}\input{../../common/math/graphics/prob/lat10_o8m2_prob.tex}}%
-  \rput(Lx){\input{../../common/math/graphics/prob/lat6_o6_prob.tex}}%
-  \rput(Lw){{\input{../../common/math/graphics/prob/lat4_m2_prob_qq22.tex}}}%
-  \rput(Lzero){{\input{../../common/math/graphics/prob/lat2_l2_prob_01.tex}}}%
+  %\rput(Lwxyz){\psset{unit=6mm}\input{../lat/lat32_l2e5_center_vwxyzoc.tex}}%
+  \rput(pLwxy){\psset{unit=9mm}\input{../prob/lat16_l2e4_prob.tex}}%
+  \rput(Lwx){\psset{unit=7mm}\input{../prob/lat8_l2e3_prob.tex}}%
+  %\rput(Lz){\psset{yunit=8mm}\input{../lat/lat18_L5dL4_center_aw.tex}}%
+  \rput(Ly){\psset{unit=5mm}\input{../prob/lat10_o8m2_prob.tex}}%
+  \rput(Lx){\input{../prob/lat6_o6_prob.tex}}%
+  \rput(Lw){{\input{../prob/lat4_m2_prob_qq22.tex}}}%
+  \rput(Lzero){{\input{../prob/lat2_l2_prob_01.tex}}}%
   }%
   %---------------------------------
   % deveolopment support
