--- a/common/series.tex
+++ b/common/series.tex
@@ -5,6 +5,16 @@
 %======================================
 \chapter{Infinite Sums}
 %======================================
+\qboxnpq{Cauchy \footnotemark}
+  {../common/people/cauchy_wkp_pdomain.jpg}
+  {If, for always increasing values of $n$, the sum $s_n$ approaches a certain limit $s$,
+   the series will be called convergent and the limit in question will be called the 
+   sum of the series.}
+\citetblt{
+  quote: & \citerp{cauchy1821}{114}, \citePpp{gonzalez1992}{429}{430}\\
+  image: & \url{http://en.wikipedia.org}, public domain
+  }
+
 \qboxnpq{Niels Henrik Abel, in a January 16, 1826 letter to Holmbo/'e \footnotemark}
   {../common/people/abelnh_wkp_pdomain.jpg}
   {The divergent series are the invention of the devil, and it is a shame to base on them any demonstration whatsoever.
