--- a/common/math/graphics/fuzzy/latp_fuzzy.tex
+++ b/common/math/graphics/fuzzy/latp_fuzzy.tex
@@ -75,11 +75,11 @@
     }%
   %\rput(Lwxyz){\psset{unit=6mm}\input{../../common/math/graphics/lat/lat32_l2e5_center_vwxyzoc.tex}}%
   %\rput(pLwxy){\psset{unit=9mm}\input{../../common/math/graphics/prob/lat16_l2e4_prob.tex}}%
-  \rput(Lwx){\input{../../common/math/graphics/fuzzy/lat8_l2e3_fuzzylat_msf.tex}}%
-  %\rput(Ly){\psset{unit=5mm}\input{../../common/math/graphics/prob/lat10_o8m2_prob.tex}}%
-  \rput(Lx){\psset{xunit=8.2mm}\input{../../common/math/graphics/fuzzy/lat6_o6_fuzzylat_msf_acpr.tex}}%
-  \rput(Lw){{\psset{xunit=8.2mm}\input{../../common/math/graphics/fuzzy/lat4_m2_fuzzylat_msf_bq.tex}}}%
-  \rput(Lzero){{\input{../../common/math/graphics/fuzzy/lat2_L2_fuzzy_msf.tex}}}%
+  \rput(Lwx){\input{../fuzzy/lat8_l2e3_fuzzylat_msf.tex}}%
+  %\rput(Ly){\psset{unit=5mm}\input{../prob/lat10_o8m2_prob.tex}}%
+  \rput(Lx){\psset{xunit=8.2mm}\input{../fuzzy/lat6_o6_fuzzylat_msf_acpr.tex}}%
+  \rput(Lw){{\psset{xunit=8.2mm}\input{../fuzzy/lat4_m2_fuzzylat_msf_bq.tex}}}%
+  \rput(Lzero){{\input{../fuzzy/lat2_L2_fuzzy_msf.tex}}}%
   }%
   %---------------------------------
   % deveolopment support
