--- a/common/math/graphics/pdfs/shell_lat6_p3_xyzv01.tex
+++ b/common/math/graphics/pdfs/shell_lat6_p3_xyzv01.tex
@@ -9,8 +9,6 @@
 %============================================================================
 \input{shelltop.tex}%
 \begin{document}%
-  \psset{xunit=0.5\psxunit}%
-  \psset{yunit=0.5\psyunit}%
-  \gsize%
-  \input{../latu/lat6_p3.tex}%
+  \psset{unit=0.5\latunit}%
+  \input{../lat/lat6_p3_xyzv01.tex}%
 \end{document}%
