--- a/common/math/graphics/prob/latp_gsp_atcgx.tex
+++ b/common/math/graphics/prob/latp_gsp_atcgx.tex
@@ -72,14 +72,14 @@
     %dotsep=0.5pt,
     %linecolor=blue,
     }%
-  \rput(Lwxyz){\psset{unit=6mm}\input{../../common/math/graphics/gsp/lat32_l2e5_gsp_atcgx.tex}}%
-  \rput(Lwxy){\input{../../common/math/graphics/gsp/lat16_l2e4_gsp_atcg.tex}}%
-  \rput(Lwx){\input{../../common/math/graphics/gsp/lat8_l2e3_gsp_aa+tt.tex}}%
-  \rput(Lz){\psset{yunit=8mm}\input{../../common/math/graphics/gsp/lat18_L5dL4_gsp.tex}}%
-  \rput(Ly){\psset{unit=5mm}\input{../../common/math/graphics/gsp/lat10_o8m2_gsp_cg.tex}}%
-  \rput(Lx){\input{../../common/math/graphics/gsp/lat6_o6_gsp_at-t-a.tex}}%
-  \rput(Lw){{\input{../../common/math/graphics/gsp/lat4_l2e2_gsp_a+t_c+g.tex}}}%
-  \rput(Lzero){{\input{../../common/math/graphics/latoc/lat2_l2_center_01.tex}}}%
+  \rput(Lwxyz){\psset{unit=6mm}\input{../gsp/lat32_l2e5_gsp_atcgx.tex}}%
+  \rput(Lwxy){\input{../gsp/lat16_l2e4_gsp_atcg.tex}}%
+  \rput(Lwx){\input{../gsp/lat8_l2e3_gsp_aa+tt.tex}}%
+  \rput(Lz){\psset{yunit=8mm}\input{../gsp/lat18_L5dL4_gsp.tex}}%
+  \rput(Ly){\psset{unit=5mm}\input{../gsp/lat10_o8m2_gsp_cg.tex}}%
+  \rput(Lx){\input{../gsp/lat6_o6_gsp_at-t-a.tex}}%
+  \rput(Lw){{\input{../gsp/lat4_l2e2_gsp_a+t_c+g.tex}}}%
+  \rput(Lzero){{\input{../latoc/lat2_l2_center_01.tex}}}%
   }%
   %---------------------------------
   % deveolopment support
