central graphics repository: 2014plat

--- a/common/latval.tex
+++ b/common/latval.tex
@@ -239,7 +239,7 @@ Such a height function actually satisfies the stronger condition of being \prope
 \citetbl{
   \citerpg{birkhoff1967}{230}{0821810251}
   }
-\label{ex:latval_height}
+\label{prop:latval_height}
 %---------------------------------------
 Let $\height(x)$ be the \fncte{height} \xref{def:height} of a point $x$ in a 
 \structe{bounded lattice} \xref{def:latb} $\latL\eqd\latbX$.
@@ -310,7 +310,7 @@ Let $\metric{x}{y}$ be the \fncte{metric} defined in \prefpp{thm:latmetric}.
 %---------------------------------------
     The function $\height$ on the \prope{Boolean} (and thus also \prope{modular}) lattice $\latL_2^3$ 
     illustrated to the right is a \prope{valuation} \xref{def:latval}
-    that is \prope{positive} (and thus also \prope{isotone}, \xrefnp{ex:latval_height}). Therefore
+    that is \prope{positive} (and thus also \prope{isotone}, \xrefnp{prop:latval_height}). Therefore
     \\\indentx$\metric{x}{y}\eqd\height(x\join y)-\height(x\meet y)\qquad{\scy\forall x,y\in\setX}$\\
     is a \fncte{metric} \xref{def:latmetric} on $\latL_2^3$.
     For example, 
