central graphics repository: ocs, oms

--- a/common/analyses.tex
+++ b/common/analyses.tex
@@ -149,6 +149,7 @@ Every linear subspace contains the additive identity zero vector, and every line
 
 %=======================================
 \section{Analyses}
+\label{sec:analysis}
 %=======================================
 An \opd{analysis} of a space $\spX$ is any lattice of subspaces of $\spX$.
 %A sequence $\seq{\spV_j}{j\in\Z}$ of linear subspaces of a linear space $\spX$ is an \hib{analysis} of $\spX$.
@@ -191,9 +192,16 @@ An \opd{analysis} of a space $\spX$ is any lattice of subspaces of $\spX$.
 %---------------------------------------
 \begin{definition}
 %---------------------------------------
-A \hid{transform} on a space $\spX$ is a sequence of projection operators that induces 
+A \opd{transform} on a space $\spX$ is a sequence of projection operators that induces 
 an \structe{analysis} on $\spX$.
 \end{definition}
+
+\pref{sec:analysis} defined an \opd{analysis} of a space $\spX$ as is any lattice of subspaces of $\spX$.
+In like manner, an \opd{analysis} of a function $\ff(x)$ with respect to a transform $\opT$ 
+is simply the transform $\opT$ of $\ff$ ($\opT\ff$).
+Such an analysis or transform is often represented as the sequence of coefficients $\seqn{\lambda_n}$
+multiplying the basis vectors $\seqn{\psi_n(x)}$ such that
+\\\indentx$\ds\ff(x) = \opT\ff(x) = \sum_{n\in\Z} \lambda_n\psi_n(x)$
 
 %---------------------------------------
 \begin{example}
