--- a/common/math/graphics/pdfs/shell_realline.tex
+++ b/common/math/graphics/pdfs/shell_realline.tex
@@ -1,10 +1,10 @@
-%===========================================================================
+%=============================================================================
 % Daniel J. Greenhoe
 % XeLaTeX file
-% for graphics .tex file to pdf file conversion
 % generate tight pdf graphics file for inclusion in a document
 %============================================================================
-\input{shelltop.tex}%
+\input{shelltop.tex}
 \begin{document}%
-  \input{../orderingsxyz.tex}%
+  \psset{unit=3mm}%
+  \gsize\input{../oms/realline.tex}%
 \end{document}%
