--- a/common/math/graphics/pdfs/shell_spinner6tol6.tex
+++ b/common/math/graphics/pdfs/shell_spinner6tol6.tex
@@ -1,10 +1,9 @@
-%===========================================================================
+%=============================================================================
 % Daniel J. Greenhoe
 % XeLaTeX file
-% for graphics .tex file to pdf file conversion
 % generate tight pdf graphics file for inclusion in a document
 %============================================================================
-\input{shelltop.tex}%
+\input{shelltop.tex}
 \begin{document}%
-  \input{../orderingsxyz.tex}%
+\gsize\input{../sto/spinner6tol6.tex}%
 \end{document}%
