--- a/common/math/graphics/pdfs/shell_wspinnermax.tex
+++ b/common/math/graphics/pdfs/shell_wspinnermax.tex
@@ -1,10 +1,11 @@
-%===========================================================================
+%=============================================================================
 % Daniel J. Greenhoe
 % XeLaTeX file
-% for graphics .tex file to pdf file conversion
 % generate tight pdf graphics file for inclusion in a document
 %============================================================================
-\input{shelltop.tex}%
+\input{shelltop.tex}
 \begin{document}%
-  \input{../orderingsxyz.tex}%
+  \psset{unit=7.5mm}%
+  \gsize%
+  \input{../sto/wspinnermax.tex}%
 \end{document}%
