central graphics repository: ocsrv, ocsop

--- a/common/math/graphics/pdfs/shell_archerytarget.tex
+++ b/common/math/graphics/pdfs/shell_archerytarget.tex
@@ -6,5 +6,5 @@
 \input{shelltop.tex}
 \begin{document}%
 \psset{unit=3mm}%
-\gsize\input{../sto/archerytarget.tex}%
+\gsize\input{../../common/math/graphics/sto/archerytarget.tex}%
 \end{document}%
