--- a/common/math/graphics/pdfs/shell_dqpsk.tex
+++ b/common/math/graphics/pdfs/shell_dqpsk.tex
@@ -5,7 +5,5 @@
 %============================================================================
 \input{shelltop.tex}
 \begin{document}%
-  %\psset{unit=6mm}%
-  \gsize%
-  \input{../../common/math/graphics/ocs/ocs_wagon_121141.tex}%
+\gsize\input{../sto/dqpsk.tex}%
 \end{document}%
