--- a/common/math/graphics/pdfs/shell_fairdieXO6c.tex
+++ b/common/math/graphics/pdfs/shell_fairdieXO6c.tex
@@ -5,5 +5,5 @@
 %============================================================================
 \input{shelltop.tex}
 \begin{document}%
-\gsize\input{../sto/fairdieXO6c.tex}%
+\gsize\input{../../common/math/graphics/sto/fairdieXO6c.tex}%
 \end{document}%
