--- a/common/math/graphics/pdfs/shell_ocs_wdie.tex
+++ b/common/math/graphics/pdfs/shell_ocs_wdie.tex
@@ -5,5 +5,5 @@
 %============================================================================
 \input{shelltop.tex}
 \begin{document}%
-\input{../ocs/ocs_wdie.tex}%
+\gsize\input{../../common/math/graphics/ocs/ocs_wdie.tex}%
 \end{document}%
