--- a/common/math/graphics/pdfs/shell_ocsrv_spinner_xy.tex
+++ b/common/math/graphics/pdfs/shell_ocsrv_spinner_xy.tex
@@ -5,5 +5,7 @@
 %============================================================================
 \input{shelltop.tex}
 \begin{document}%
-  \input{../ocsrv/ocsrv_spinner_xy.tex}%
+  %\psset{unit=15mm}%
+  \gsize%
+  \input{../../common/math/graphics/ocsrv/ocsrv_spinner_xy.tex}%
 \end{document}%
