--- a/common/math/graphics/pdfs/shell_pEocsE_max.tex
+++ b/common/math/graphics/pdfs/shell_pEocsE_max.tex
@@ -7,5 +7,5 @@
 \begin{document}%
   \psset{unit=6mm}%
   \gsize%
-  \input{../sto/pEocsE_max.tex}%
+  \input{../../common/math/graphics/sto/pEocsE_max.tex}%
 \end{document}%
