--- a/common/math/graphics/pdfs/shell_pspinner.tex
+++ b/common/math/graphics/pdfs/shell_pspinner.tex
@@ -5,5 +5,5 @@
 %============================================================================
 \input{shelltop.tex}
 \begin{document}%
-\gsize\input{../oms/pspinner.tex}%
+\gsize\input{../../common/math/graphics/oms/pspinner.tex}%
 \end{document}%
