--- a/common/math/graphics/pdfs/shell_pspinner_xy.tex
+++ b/common/math/graphics/pdfs/shell_pspinner_xy.tex
@@ -5,5 +5,5 @@
 %============================================================================
 \input{shelltop.tex}
 \begin{document}%
-\gsize\input{../sto/pspinner_xy.tex}%
+\gsize\input{../../common/math/graphics/sto/pspinner_xy.tex}%
 \end{document}%
