--- a/common/math/graphics/pdfs/shell_rdie_wxyz.tex
+++ b/common/math/graphics/pdfs/shell_rdie_wxyz.tex
@@ -5,5 +5,5 @@
 %============================================================================
 \input{shelltop.tex}
 \begin{document}%
-\gsize\input{../sto/rdie_wxyz.tex}%
+\gsize\input{../../common/math/graphics/sto/rdie_wxyz.tex}%
 \end{document}%
