--- a/common/math/graphics/pdfs/shell_wring5short.tex
+++ b/common/math/graphics/pdfs/shell_wring5short.tex
@@ -5,5 +5,5 @@
 %============================================================================
 \input{shelltop.tex}
 \begin{document}%
-  \input{../ocs/wring5short.tex}%
+\gsize\input{../../common/math/graphics/ocs/wring5short.tex}%
 \end{document}%
