--- a/common/math/graphics/pdfs/shell_dartstarget.tex
+++ b/common/math/graphics/pdfs/shell_dartstarget.tex
@@ -6,5 +6,5 @@
 \input{shelltop.tex}
 \begin{document}%
 \psset{unit=3mm}%
-\gsize\input{../sto/dartstarget.tex}%
+\gsize\input{../../common/math/graphics/sto/dartstarget.tex}%
 \end{document}%
