--- a/common/math/graphics/pdfs/shell_ocs_spinner_121141.tex
+++ b/common/math/graphics/pdfs/shell_ocs_spinner_121141.tex
@@ -7,5 +7,5 @@
 \begin{document}%
   %\psset{unit=6mm}%
   \gsize%
-  \input{../ocs/ocs_spinner_121141.tex}%
+  \input{../../common/math/graphics/ocs/ocs_spinner_121141.tex}%
 \end{document}%
