--- a/common/math/graphics/pdfs/shell_ocsdarts.tex
+++ b/common/math/graphics/pdfs/shell_ocsdarts.tex
@@ -6,5 +6,5 @@
 \input{shelltop.tex}
 \begin{document}%
 \psset{unit=7mm}%
-\gsize\input{../sto/ocsdarts.tex}%
+\gsize\input{../../common/math/graphics/sto/ocsdarts.tex}%
 \end{document}%
