--- a/common/math/graphics/pdfs/shell_wdie_max.tex
+++ b/common/math/graphics/pdfs/shell_wdie_max.tex
@@ -5,7 +5,7 @@
 %============================================================================
 \input{shelltop.tex}
 \begin{document}%
-  %\psset{unit=6mm}%
+  \psset{unit=6mm}%
   \gsize%
-  \input{../../common/math/graphics/ocs/ocs_wagon_121141.tex}%
+  \input{../sto/wdie_max.tex}%
 \end{document}%
