central graphics repository: 2014sto compiles

--- a/common/math/graphics/pdfs/shell_dicetol6.tex
+++ b/common/math/graphics/pdfs/shell_dicetol6.tex
@@ -5,5 +5,5 @@
 %============================================================================
 \input{shelltop.tex}
 \begin{document}%
-\gsize\input{../sto/pdice_xy.tex}%
+\gsize\input{../sto/dicetol6.tex}%
 \end{document}%
