--- a/common/math/graphics/pdfs/shell_pairdice.tex
+++ b/common/math/graphics/pdfs/shell_pairdice.tex
@@ -5,5 +5,5 @@
 %============================================================================
 \input{shelltop.tex}
 \begin{document}%
-\gsize\input{../sto/pdice_xy.tex}%
+\gsize\input{../sto/pairdice.tex}%
 \end{document}%
