--- a/graphmath/front.tex
+++ b/graphmath/front.tex
@@ -17,7 +17,7 @@
 \mbox{}\vfill
 \begin{center}
 \fntAdventor\Huge\bfseries
-Graphics for Mathemats using \LaTeX\\[80mm]
+Graphics for Mathematics using \LaTeX\\[80mm]
 \fntHeros\normalsize
 Daniel J. Greenhoe
 \end{center}
