--- a/graphmath/category.tex
+++ b/graphmath/category.tex
@@ -197,10 +197,10 @@
 %\graphic{trirel_psigma}
  \graphic{trirel_sigmap}
 
-/section{Argmin: common/math/graphics/argmin} % common/math/graphics/argmin
+\section{Argmin: common/math/graphics/argmin} % common/math/graphics/argmin
  \graphic{argmin_xx-2x2}
 
-/section{Balls: common/math/graphics/balls} %common/math/graphics/balls
+\section{Balls: common/math/graphics/balls} %common/math/graphics/balls
 
 %\graphic{r}
  \graphic{rdie_3d_larcball}
@@ -212,7 +212,7 @@
  \graphic{egg-production}
  \graphic{global-temp}
  \graphic{sunspots}
- \graphic{sunspots_1749-2004}
+%\graphic{sunspots_1749-2004}
 %\graphic{sunspots_1749-2004_adjusted}
 %\graphic{sunspots_welchPSD_4segs}
 
@@ -226,22 +226,22 @@
 %\graphic{dfIII_order1_abc}
  \graphic{dfII_order1_abc}
  \graphic{dfI_order1_abc}
- \graphic{dfI_order1_lpf2pi3}
+%\graphic{dfI_order1_lpf2pi3}
  \graphic{dfI_order2_156}
  \graphic{dfI_order2_fir}
-%\graphic{diff}
- \graphic{hanninghp50}
- \graphic{hanninglp16}
- \graphic{hanninglp50}
- \graphic{hpfwc}
  \graphic{iir1pole}
  \graphic{iir2n}
  \graphic{iir2rphi}
+%\graphic{diff}
+ \graphic{hpfwc}
+ \graphic{lpfwc}
+ \graphic{hanninghp50}
+ \graphic{hanninglp16}
+ \graphic{hanninglp50}
 %\graphic{imarks8pz}
 %\graphic{IntSum}
 %\graphic{IntTrap}
 %\graphic{linear}
- \graphic{lpfwc}
 %\graphic{nonti}
  \graphic{pz_allpass}
  \graphic{pz_minphase}
@@ -349,7 +349,7 @@
  \graphic{latlatringxy}
  \graphic{latlatringxyz}
  \graphic{latlattopxyz}
- \graphic{latlattopxyz_covers}
+%\graphic{latlattopxyz_covers}
  \graphic{lattopxy}
  \graphic{lattopxyz}
  \graphic{latwavxyz}
@@ -711,28 +711,28 @@
 \section{Negation: common/math/graphics/neg}
  \graphic{lat2_L2_10_-0-1}
  \graphic{lat3_L3_1-0-a_a_0-1}
- \graphic{lat3_L3_1-0_a_0-1-x}
- \graphic{lat3_L3_1-0_x-1_0-x}
- \graphic{lat3_L3_1-1_x-x_0-0}
- \graphic{lat3_L3_1-a-0_a-1_0}
- \graphic{lat3_L3_1-x_x-0_0-1}
- \graphic{lat3_L3_1x0_-0-1-x}
- \graphic{lat3_L3_1x0_-0-x-1}
+%%\graphic{lat3_L3_1-0_a_0-1-x}
+%%\graphic{lat3_L3_1-0_x-1_0-x}
+%%\graphic{lat3_L3_1-1_x-x_0-0}
+%%\graphic{lat3_L3_1-a-0_a-1_0}
+%%\graphic{lat3_L3_1-x_x-0_0-1}
+%%\graphic{lat3_L3_1x0_-0-1-x}
+%%\graphic{lat3_L3_1x0_-0-x-1}
 %\graphic{lat3_L3_1x0_-1-1-x}
- \graphic{lat3_L3_1x0_-1x0}
- \graphic{lat3_L3_1_a-0_0-1-a}
+%%\graphic{lat3_L3_1x0_-1x0}
+%%\graphic{lat3_L3_1_a-0_0-1-a}
  \graphic{lat4_bn4_a-a_b-b}
  \graphic{lat4_m2_1-0_a_b-b_0-1-a}
- \graphic{lat4_m2_a-b_b-a}
+%%\graphic{lat4_m2_a-b_b-a}
  \graphic{lat5_m3_negdm}
- \graphic{lat5_m3_negkl}
+%%\graphic{lat5_m3_negkl}
  \graphic{lat6_o6slash_kleene}
- \graphic{lat6_o6slash_nonantitone}
+%%\graphic{lat6_o6slash_nonantitone}
  \graphic{lat6_o6_1-0_a-b_b-a_c-d_d-c_0-1}
- \graphic{lat6_o6_negdm}
- \graphic{lat6_o6_negor}
+%%\graphic{lat6_o6_negdm}
+%%\graphic{lat6_o6_negor}
  \graphic{lat8_l2e3_abc_dm}
- \graphic{lat8_l2e3_abc_ortho}
+%%\graphic{lat8_l2e3_abc_ortho}
 
 % common/math/graphics/neg/save
 %
@@ -801,7 +801,7 @@
 %=======================================
 \chapter{Frames and Bases}
 %=======================================
-/section{B-Splines: common/math/graphics/bsplines} % common/math/graphics/bsplines
+\section{B-Splines: common/math/graphics/bsplines} % common/math/graphics/bsplines
  \graphic{b0_g}
  \graphic{b1_g}
  \graphic{b2_g}
@@ -1085,7 +1085,7 @@
  \graphic{larc_hmg}
  \graphic{larc_metex}
  \graphic{larc_pq}
- \graphic{larc_R2_balls}
+ \graphicw{larc_R2_balls}
  \graphic{larc_ti}
  \graphic{larc_trieq}
  \graphic{limrp0}
